DEAL-1011: Alignment and wording should be corrected in Download Certificate Template popup [0.0.1]

--- a/Client/DealnetPortal.Web/Content/less/credit-check.less
+++ b/Client/DealnetPortal.Web/Content/less/credit-check.less
@@ -77,6 +77,11 @@
     display: none;
   }
 }
+
+.text-left .dealnet-disabled-input:not(.form-control-disabled){
+  text-align: left;
+}
+
 input.dealnet-disabled-input,
 select.dealnet-disabled-input{
 
